--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>My room</title>
   </head>
   <body>
+    <button id="projects-button">hi</button>
     <canvas class="webgl"></canvas>
 
     <script type="module" src="/main.js"></script>
