added day and night functionality

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   </head>
   <body>
     <button id="projects-button">hi</button>
+    <button id="day-night">day night</button>
     <canvas class="webgl"></canvas>
 
     <script type="module" src="/main.js"></script>
