--- a/index.html
+++ b/index.html
@@ -4,13 +4,19 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:opsz,wght@6..12,200;6..12,400;6..12,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./style.css" />
     <title>My room</title>
   </head>
-  <body>
+  <body>   
+     <canvas class="webgl"></canvas>
     <button id="projects-button">hi</button>
     <button id="day-night">day night</button>
-    <canvas class="webgl"></canvas>
+<main>
+  
+</main>
 
     <script type="module" src="/main.js"></script>
   </body>
