started to work on a regular website

--- a/index.html
+++ b/index.html
@@ -4,19 +4,51 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:opsz,wght@6..12,200;6..12,400;6..12,700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Nunito+Sans:opsz,wght@6..12,200;6..12,400;6..12,700&display=swap"
+      rel="stylesheet"
+    />
+
+    <script
+      src="https://kit.fontawesome.com/f83777b1f5.js"
+      crossorigin="anonymous"
+    ></script>
+    <link rel="stylesheet" href="./styles/style.css" />
     <title>My room</title>
   </head>
-  <body>   
-     <canvas class="webgl"></canvas>
+  <body>
+    <canvas class="webgl"></canvas>
     <button id="projects-button">hi</button>
     <button id="day-night">day night</button>
-<main>
-  
-</main>
+    <main>
+      <section id="hero">
+        <article id="hero-greetings">
+          <h1>Hi, I'm Łukasz and I'm a <span>developer!</span></h1>
+          <h3>Want to get to know me better? Keep scrolling!</h3>
+
+          <h3 id="list-header">Find me here!</h3>
+          <ul>
+            <li><i class="fa fa-facebook"></i></li>
+            <li><i class="fa fa-instagram"></i></li>
+            <li><i class="fa fa-linkedin"></i></li>
+            <li><i class="fa fa-github"></i></li>
+          </ul>
+        </article>
+        <article id="hero-image">
+          <img
+            src="https://png.pngtree.com/png-clipart/20221123/ourmid/pngtree-orange-brush-png-image_6475820.png"
+            alt="paint-smeare"
+          />
+        </article>
+      </section>
+
+
+      <section id="about">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi, ex accusamus! Dolore quia earum natus modi laborum minima nihil facilis at accusamus, vero ut id aperiam tenetur corrupti omnis perferendis.
+      </section>
+    </main>
 
     <script type="module" src="/main.js"></script>
   </body>
