changes to the day night button

--- a/index.html
+++ b/index.html
@@ -20,8 +20,13 @@
   </head>
   <body>
     <canvas class="webgl"></canvas>
+
+    <button id="day-night">
+      <div>
+        <i class="fa fa-sun" id="day-time-icon"></i>
+      </div>
+    </button>
     <button id="projects-button">hi</button>
-    <button id="day-night">day night</button>
     <main>
       <section id="hero">
         <article id="hero-greetings">
@@ -41,12 +46,39 @@
             src="https://png.pngtree.com/png-clipart/20221123/ourmid/pngtree-orange-brush-png-image_6475820.png"
             alt="paint-smeare"
           />
+          <img
+          src="https://png.pngtree.com/png-clipart/20221123/ourmid/pngtree-orange-brush-png-image_6475820.png"
+          alt="paint-smeare"
+        />
         </article>
       </section>
 
-
       <section id="about">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi, ex accusamus! Dolore quia earum natus modi laborum minima nihil facilis at accusamus, vero ut id aperiam tenetur corrupti omnis perferendis.
+        <article>
+        <p>
+          Hi, my name is <span>Łukasz</span>, as you've probably already found out on the
+          home page, but anyway.. how nice to meet you! Allow me to let you in
+          on a thing or two about myself. I am from Poland, <span>Kraków</span> and I am
+          currently studying here on a IT related faculty. I've been learning
+          <span>web developement</span> for the last couple of months, and I've come to
+          appreciate it greatly. Besides that, I've always considered myself a
+          social and communicative persona, hence <span>working in a team</span> should come
+          naturally. Out of the office I really enjoy watching and participating
+          in various sports, such as football or Formula 1 (only as a viewer
+          obviously).
+        </p>
+      </article>
+        <article>
+          <h3>What am I like?</h3>
+          <ul>
+            <li>Consientious</li>
+            <li>Creative</li>
+            <li>Social</li>
+            <li>A rapid learner</li>
+            <li>Meticulous</li>
+            <li>Passionate</li>
+          </ul>
+        </article>
       </section>
     </main>
 
