--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -28,60 +28,255 @@
     </button>
     <button id="projects-button">hi</button>
     <main>
-      <section id="hero">
+      <section id="hero" onmousemove="paralaxH1(event)">
         <article id="hero-greetings">
-          <h1>Hi, I'm Łukasz and I'm a <span>developer!</span></h1>
+          <h1 id="main-h1">developer & programmer <span>developer & programmer</span> <span>developer & programmer</span></h1>
           <h3>Want to get to know me better? Keep scrolling!</h3>
 
-          <h3 id="list-header">Find me here!</h3>
+
           <ul>
-            <li><i class="fa fa-facebook"></i></li>
-            <li><i class="fa fa-instagram"></i></li>
-            <li><i class="fa fa-linkedin"></i></li>
-            <li><i class="fa fa-github"></i></li>
+            <li><a href="https://www.facebook.com/luki.flork" target="_blank"><i class="fa fa-facebook"></i></a></li>
+            <li><a href="https://instagram.com/luki.flork?igshid=ZGUzMzM3NWJiOQ==" target="_blank"><i class="fa fa-instagram"></i></a></li>
+            <li><a href="https://www.linkedin.com/in/%C5%82ukasz-florek-37784b279" target="_blank"><i class="fa fa-linkedin"></i></a></li>
+            <li><a href="https://github.com/LukassF" target="_blank"><i class="fa fa-github"></i></a></li>
           </ul>
         </article>
         <article id="hero-image">
+          <!-- <img
+            src="https://png.pngtree.com/png-clipart/20221123/ourmid/pngtree-orange-brush-png-image_6475820.png"
+            alt="paint-smeare"
+          />
           <img
             src="https://png.pngtree.com/png-clipart/20221123/ourmid/pngtree-orange-brush-png-image_6475820.png"
             alt="paint-smeare"
           />
           <img
-          src="https://png.pngtree.com/png-clipart/20221123/ourmid/pngtree-orange-brush-png-image_6475820.png"
-          alt="paint-smeare"
-        />
+            src="https://png.pngtree.com/png-clipart/20221123/ourmid/pngtree-orange-brush-png-image_6475820.png"
+            alt="paint-smeare"
+          /> -->
         </article>
       </section>
 
       <section id="about">
         <article>
-        <p>
-          Hi, my name is <span>Łukasz</span>, as you've probably already found out on the
-          home page, but anyway.. how nice to meet you! Allow me to let you in
-          on a thing or two about myself. I am from Poland, <span>Kraków</span> and I am
-          currently studying here on a IT related faculty. I've been learning
-          <span>web developement</span> for the last couple of months, and I've come to
-          appreciate it greatly. Besides that, I've always considered myself a
-          social and communicative persona, hence <span>working in a team</span> should come
-          naturally. Out of the office I really enjoy watching and participating
-          in various sports, such as football or Formula 1 (only as a viewer
-          obviously).
-        </p>
-      </article>
-        <article>
-          <h3>What am I like?</h3>
+          <h3>What am I like?<span>What am I like?</span><span>What am I like?</span></h3>
           <ul>
             <li>Consientious</li>
             <li>Creative</li>
             <li>Social</li>
-            <li>A rapid learner</li>
+            <li>Adaptability</li>
             <li>Meticulous</li>
             <li>Passionate</li>
           </ul>
         </article>
+        <article>
+          <p>
+            Hi, my name is <span>Łukasz</span>, as you've probably already found
+            out on the home page, but anyway.. how nice to meet you! Allow me to
+            let you in on a thing or two about myself. I am from Poland,
+            <span>Kraków</span> and I am currently studying here on a IT related
+            faculty. I've been learning <span>web developement</span> for the
+            last couple of months, and I've come to appreciate it greatly.
+            Besides that, I've always considered myself a social and
+            communicative persona, hence <span>working in a team</span> should
+            come naturally. Out of the office I really enjoy watching and
+            participating in various sports, such as football or Formula 1 (only
+            as a viewer obviously).
+          </p>
+        </article>
+      </section>
+
+      <section id="skills">
+        <h1>
+          My skills
+          <span>My skills</span>
+          <span>My skills</span>
+        </h1>
+        <article>
+          <div class="skill-1">
+            <h3>HTML 5</h3>
+            <progress min="0" max="100" value="90"></progress>
+            <span>90%</span>
+          </div>
+
+          <div class="skill-2">
+            <h3>CSS/SCSS/TAILWIND</h3>
+            <progress min="0" max="100" value="95"></progress>
+            <span>95%</span>
+          </div>
+
+          <div class="skill-3">
+            <h3>Javascript/ Typescript</h3>
+            <progress min="0" max="100" value="90"></progress>
+            <span>90%</span>
+          </div>
+          <div class="skill-4">
+            <h3>React JS/ Native</h3>
+            <progress min="0" max="100" value="90"></progress>
+            <span>90%</span>
+          </div>
+          <div class="skill-5">
+            <h3>Next JS</h3>
+            <progress min="0" max="100" value="85"></progress>
+            <span>85%</span>
+          </div>
+
+          <div class="skill-6">
+            <h3>Angular</h3>
+            <progress min="0" max="100" value="80"></progress>
+            <span>80%</span>
+          </div>
+          <div class="skill-7">
+            <h3>Vue JS</h3>
+            <progress min="0" max="100" value="80"></progress>
+            <span>80%</span>
+          </div>
+          <div class="skill-8">
+            <h3>Node JS/Express JS</h3>
+            <progress min="0" max="100" value="85"></progress>
+            <span>85%</span>
+          </div>
+          <div class="skill-9">
+            <h3>PHP</h3>
+            <progress min="0" max="100" value="80"></progress>
+            <span>80%</span>
+          </div>
+          <div class="skill-10">
+            <h3>SQL</h3>
+            <progress min="0" max="100" value="90"></progress>
+            <span>90%</span>
+          </div>
+        </article>
+      </section>
+
+      <section id="projects">
+        <h1>My projects <span>My projects</span> <span>My projects</span></h1>
+        <article>
+          <div onclick="navigateTo('https://music-clone-lukas.vercel.app/',event)">
+
+            <h1>Music App</h1>
+            <p>
+              Music-App is a Spotify Clone music app for streaming music and
+              manipulating music data. It has all of the features typical for
+              spotify, such as playing songs, creating playlists and listening
+              to favourite artists or their albums. The free version doesn't
+              include streaming music so make sure you have a premium Spotify
+              account to see the full capabilities of the app.
+            </p>
+            <span>
+              <ul>
+                <li>Vue JS</li>
+                <li>Vuex</li>
+                <li>SCSS</li>
+              </ul>
+            </span>
+            <a href="https://github.com/LukassF/spotify-clone" target="_blank"><i class="fa fa-github"></i></a>
+          </div>
+          <div onclick="navigateTo('https://next-login-lime.vercel.app/login',event)">
+
+            <h1 >Text&apos;em</h1>
+            <p>
+              Chat with friends and strangers alike, is the motto of the Text'em
+              chat app. It offers a variety of features but the main and the
+              most important one is the ability to take part in realtime chats
+              with other logged in users. Due to the use of websockets the
+              connection is seamless and navigation intuitive. Make sure to try
+              it and chat with others!
+            </p>
+            <span>
+              <ul>
+                <li>Next JS</li>
+                <li>Typescript</li>
+                <li>Tailwind</li>
+              </ul>
+            </span>
+            <a href="https://github.com/LukassF/next-login" target="_blank"><i class="fa fa-github"></i></a>
+          </div>
+          <div onclick="navigateTo('https://github.com/LukassF/NativeFood',event)">
+
+            <h1>Native Foods</h1>
+            <p>
+              NativeFoods is an app, main purpouse of which is to grant easy and
+              seamless access to various recipies from all around the world.
+              Even the user can show off his recipe by taking a picture of a
+              dish and submiting it along with other neccessary info. There is
+              also a functionality allowing for choosing a random recipe on the
+              days when the user wants to experiment. The app has been build in
+              Expo React Native, and all the server acions are coded in Node JS.
+            </p>
+            <span>
+              <ul>
+                <li>React Native</li>
+                <li>Express JS</li>
+                <li>Mongo DB</li>
+              </ul>
+            </span>
+
+            <a href="https://github.com/LukassF/NativeFood" target="_blank"><i class="fa fa-github"></i></a>
+          </div>
+          <div onclick="navigateTo('https://sociallyawkward.vercel.app/home',event)">
+        
+            <h1 >Socially Awkward</h1>
+            <p>Socially Awkward is a social media type app, meant for socializing with other users by posting images or interacting with others' posts in various ways such as liking them or commenting. The frontend side of the project is built with Angular, and the backend has been created with vanilla PHP.</p>
+            <span>
+              <ul>
+                <li>Angular</li>
+                <li>PHP</li>
+                <li>My SQL</li>
+              </ul>
+            </span>
+            <a href="https://github.com/LukassF/Stare-Share" target="_blank"><i class="fa fa-github"></i></a>
+          </div>
+          <div onclick="navigateTo('https://angular-ecommerce-sand.vercel.app/home',event)">
+    
+            <h1>NG E-commerce</h1>
+            <p>The Angular E-commerce website, is, as could be inferred, an app mimicking the appearance,functionality and purpouse of a typical e-commerce website.The functionalities range from browsing a wide array of products, selecting ones the customer desires to purchase , and proceeding with the checkout. The client side of an app is built with Angular, the serverside code however is written in Express JS. </p>
+            <span>
+              <ul>
+                <li>Angular</li>
+                <li>Express JS</li>
+                <li>Tailwind</li>
+              </ul>
+            </span>
+            <a href="https://github.com/LukassF/angular-ecommerce" target="_blank"><i class="fa fa-github"></i></a>
+          </div>
+        </article>
+      </section>
+
+      <section id="footer">
+        <footer>
+          <div>
+            <h3>About</h3>
+            <p>I am an ambitious, self taught developer - mostly frontend, however lately I have been intensively learning backend technologies too, such as Node JS or PHP. What can you expect from me? Mostly incredible productivity and consientiousness, along with rapid adaptability. If that sounds interesting, contact me through email, linkedIn or other social media.</p>
+          </div>
+
+          <div>
+            <h3>Traits</h3>
+            <ul>
+              <li>Consientious</li>
+              <li>Creative</li>
+              <li>Social</li>
+              <li>A rapid learner</li>
+              <li>Meticulous</li>
+              <li>Passionate</li>
+            </ul>
+          </div>
+
+          <div>
+            <h3>Contact</h3>
+            <ul>
+              <li><i class="fa fa-envelope"></i> <span>szkulkerolf@gmail.com</span></li>
+              <li><i class="fa fa-phone"></i><span>+48 798 767 199</span></li>
+              <li><i class="fa fa-location"></i><span>Kraków, Lesser Poland, Poland</span></li>
+            </ul>
+          </div>
+
+          <span id="bottom">Łukasz Florek 2003</span>
+        </footer>
       </section>
     </main>
 
-    <script type="module" src="/main.js"></script>
+    <script type="module" src="/three.js"></script>
+    <script src="main.js"></script>
   </body>
 </html>
