added loading manager and made some final tweaks

--- a/index.html
+++ b/index.html
@@ -21,6 +21,11 @@
     <title>My room</title>
   </head>
   <body>
+    <section id="loader">
+      <h1>LOADING ASSETS</h1>
+      <progress id="loader-progress" min="0" max="100" value="0"></progress>
+      <div id="loader-percent">0%</div>
+    </section>
     <canvas class="webgl"></canvas>
 
     <button id="day-night">
