added scroll indicator and refurbished the camera movement system

--- a/index.html
+++ b/index.html
@@ -51,20 +51,18 @@
 
           </ul>
         </article>
-        <article id="hero-image">
-          <!-- <img
-            src="https://png.pngtree.com/png-clipart/20221123/ourmid/pngtree-orange-brush-png-image_6475820.png"
-            alt="paint-smeare"
-          />
-          <img
-            src="https://png.pngtree.com/png-clipart/20221123/ourmid/pngtree-orange-brush-png-image_6475820.png"
-            alt="paint-smeare"
-          />
-          <img
-            src="https://png.pngtree.com/png-clipart/20221123/ourmid/pngtree-orange-brush-png-image_6475820.png"
-            alt="paint-smeare"
-          /> -->
-        </article>
+       
+        <div class="scroll-me-tag">
+          <div>S</div>
+          <div>C</div>
+          <div>R</div>
+          <div>O</div>
+          <div>L</div>
+          <div>L</div>
+
+          <div style="margin-left: 8px;">M</div>
+          <div>E</div>
+        </div>
       </section>
 
       <section id="about">
